# amcat

./: CHANGELOG.md  README.md  pyproject.toml  terminal-music-extension.md
amcat/: __init__.py  cli.py
amcat/core/: parser.py  scheduler.py  synth.py  utils.py
songs/: index.html
tests/: test_ams.ams  test_ams_polyphonic.ams  test_midi_cache_reuse.py  test_midi_inline.ams  test_midi_inline.py  test_midi_reference.ams  test_shepard.sh
