[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amcat"
version = "0.2.1"
description = "ANSI music playback and embedded audio for terminals"
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["amcat", "amcat.core"]

[project.scripts]
amcat = "amcat.cli:main"
